[package]
name = "vts-set-param"
version = "0.1.0"
authors = ["Walfie <walfington@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.42"
figment = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.22"
tungstenite = "0.15.0"
xdg = "2.2.0"
